[package]
name = "tyl-config"
version = "0.1.0"
edition = "2021"
authors = ["TYL Framework Team"]
license = "AGPL-3.0"
repository = "https://github.com/the-yaml-life/tyl-config"
description = "Simplified but extensible configuration management for TYL framework microservices"
homepage = "https://github.com/the-yaml-life/tyl-config"
documentation = "https://docs.rs/tyl-config"
readme = "README.md"
keywords = ["config", "microservices", "hexagonal-architecture", "rust", "tyl-framework"]
categories = ["development-tools", "rust-patterns", "config"]

[dependencies]
# TYL Framework dependencies (local for development)
tyl-errors = { git = "https://github.com/the-yaml-life/tyl-errors", branch = "main" }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4"] }

# Add module-specific dependencies here

[dev-dependencies]
# Development dependencies for testing